# mobile-bench

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/libs/openCL/include/CL/: err_code.h
app/src/cpp/: native-lib.cpp  native-lib.h  vectorAdd.cpp  vectorAdd.h
app/src/cpp/benchmark/: Event.cpp  Event.h  benchmark.cpp  benchmark.h
app/src/cpp/benchmark/SHOC-level0/: BusSpeedDownload.cpp  BusSpeedDownload.h  BusSpeedReadback.cpp  BusSpeedReadback.h
app/src/cpp/benchmark/matrixMul/: matrixMul.cpp  matrixMul.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myfirstapp/: GenericFileProvider.java  MainActivity.java
app/src/main/res/layout/: activity_display_message.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
